--- a/Atividades_HTML/exercicioReact/.gitignore
+++ b/Atividades_HTML/exercicioReact/.gitignore
@@ -22,3 +22,35 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+Your branch is up to date with 'origin/main'.
+
+
+        ../AjaxAula/
+        ../AtividadeBottStrap/
+        ../AulaReact/
+        ../Calculadora_VUE/
+        "../Calculadora_m\303\251dia/"
+        ../CodesPlugins/
+        "../Exec\303\255cio21/"
+        ../ExercicioSass/
+        "../Exerc\303\255cioResponsivoCSS/"
+        ../FormCadastro/
+        ../GaleriaDeFotos/
+        ../LessAula/
+        ../ListaDeTarefas/
+        ../Projeto3/
+        ../TatooShop/
+        ../ajaxTarefa/
+        ../aula_VUE/
+        ../bemExercicio/
+        ../cLessT/
+        ../contato2_js/
+        ../eventoParcel/
+        "../exerc\303\255cioBootStrap/"
+        ../gruntAulas/
+        ../gruntTarefa/
+        ../gulp/
+        ../projetoDisney/
+        ../sass/
+        ../tarefaGulp/
+        ../testando/
