--- a/Atividades_HTML/portifolio/.eslintrc.json
+++ b/Atividades_HTML/portifolio/.eslintrc.json
@@ -6,27 +6,24 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin: prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "react",
-    "react-hooks"
-  ],
+  "plugins": ["@typescript-eslint", "react", "react-hooks"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps":"warn",
+    "react-hooks/exhaustive-deps": "warn",
     "react/prop/types": "off",
     "react/react-in-jsx-code": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   },
   "setting": {
-    "react":{
+    "react": {
       "version": "detect"
     }
   }
