--- a/Atividades_HTML/portifolio/.eslintrc.json
+++ b/Atividades_HTML/portifolio/.eslintrc.json
@@ -18,11 +18,11 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop/types": "off",
-    "react/react-in-jsx-code": "off",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   },
-  "setting": {
+  "settings": {
     "react": {
       "version": "detect"
     }
