--- a/Portfolio/meu-portifolio/package.json
+++ b/Portfolio/meu-portifolio/package.json
@@ -19,10 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build": "cd MeuPortifolio && react-scripts build",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build": "cd MeuPortifolio && react-scripts build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
